# dartwork-mpl-examples

./: .gitignore  .gitmodules  README.md  pyproject.toml
example/: Colormap test.ipynb  How to plot using matplotlib - 1.ipynb  heatmap-convergence.ipynb
example/asset/TRT/: 230106_TRT_kaia_data.xlsx
paper_example_PMV/: plot_example_PMV.ipynb  radconv_graph.py
