[tool.poetry]
name = "dartwork-mpl-examples"
version = "0.1.0"
description = ""
authors = ["Sangwon91 <lsw91.main@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dartwork-mpl = {path = "dartwork-mpl", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
