[tool.poetry]
name = "dartwork-mpl-examples"
version = "0.1.0"
description = ""
authors = ["Sangwon91 <lsw91.main@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dartwork-mpl = {git = "https://github.com/dartwork-repo/dartwork-mpl"}
notebook = "^7.2.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
